--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "deploy": "strapi deploy"
   },
   "dependencies": {
+    "@pluginpal/webtools-addon-sitemap": "^1.0.0-beta.10",
+    "@pluginpal/webtools-core": "^1.0.0-beta.15",
     "@strapi/plugin-cloud": "4.25.1",
     "@strapi/plugin-i18n": "4.25.1",
     "@strapi/plugin-users-permissions": "4.25.1",
