✨ Add sendgrid for receiving welcome emails

--- a/.env.dev.example
+++ b/.env.dev.example
@@ -41,3 +41,6 @@ DATABASE_USERNAME=SomeUser
 DATABASE_PASSWORD=SomePassword
 # REQUIRED: DATABASE_SSL=false -> Change only if you required SSL between Strapi and DB
 DATABASE_SSL=false
+
+
+SENDGRID_API_KEY=API_KEY
