--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@strapi/plugin-cloud": "4.25.1",
     "@strapi/plugin-i18n": "4.25.1",
     "@strapi/plugin-users-permissions": "4.25.1",
+    "@strapi/provider-email-sendgrid": "^5.9.0",
     "@strapi/strapi": "4.25.1",
     "mysql": "2.18.1",
     "pg": "^8.12.0",
