--- a/.env.example
+++ b/.env.example
@@ -44,3 +44,8 @@ DATABASE_SSL=false
 
 
 SENDGRID_API_KEY=API_KEY
+
+AWS_ACCESS_KEY_ID=<Access Key ID>
+AWS_ACCESS_SECRET=<Secret access key>
+AWS_REGION=eu-west-2
+AWS_BUCKET=strapi-aws-s3-images-bucket
