--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@strapi/plugin-i18n": "4.25.1",
     "@strapi/plugin-users-permissions": "4.25.1",
     "@strapi/provider-email-sendgrid": "^5.9.0",
+    "@strapi/provider-upload-aws-s3": "^5.10.2",
     "@strapi/strapi": "4.25.1",
     "mysql": "2.18.1",
     "pg": "^8.12.0",
