--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,9 +1,7 @@
 services:
   strapi:
+    image: bryanstgarcia/cms-strapi:latest
     container_name: cms-strapi-production
-    build:
-      context: .
-      dockerfile: Dockerfile.prod
     env_file: .env
     environment:
       DATABASE_CLIENT: ${DATABASE_CLIENT}
@@ -16,8 +14,6 @@ services:
       ADMIN_JWT_SECRET: ${ADMIN_JWT_SECRET}
       APP_KEYS: ${APP_KEYS}
       NODE_ENV: ${NODE_ENV}
-#    volumes:
-#      - db_sqlite:/opt/app/data/
     # Only add expose when working with reverse proxy. Expose only the container PORT
     expose:
       - "1337"
@@ -25,19 +21,9 @@ services:
     #ports:
     # - "1337:1337"
     networks:
-    # Change network with your project and network name
       - reverse-proxy-network
 
-#volumes:
-#  db_sqlite:
-#    driver: local
-#    driver_opts:
-#      type: none
-#      device: ${HOST_VOLUME_PATH}
-#      o: bind
-
 networks:
-  # Change network here too. This network should exists before running this compose project
   reverse-proxy-network:
     name: reverse-proxy-network
     driver: bridge
