--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -1,5 +1,6 @@
 # Creating multi-stage build for production
-FROM node:18-alpine AS build
+ARG TARGETPLATFORM
+FROM --platform=$TARGETPLATFORM node:20-alpine AS build
 RUN apk update && apk add --no-cache build-base gcc autoconf automake zlib-dev libpng-dev vips-dev git > /dev/null 2>&1
 ARG NODE_ENV=production
 ENV NODE_ENV=${NODE_ENV}
@@ -14,7 +15,7 @@ COPY . .
 RUN npm run build
 
 # Creating final production image
-FROM node:18-alpine
+FROM --platform=$TARGETPLATFORM node:20-alpine
 RUN apk add --no-cache vips-dev
 ARG NODE_ENV=production
 ENV NODE_ENV=${NODE_ENV}
