🔧 Add newsletter API configuration to .env.example

--- a/.env.example
+++ b/.env.example
@@ -47,3 +47,7 @@ AWS_ACCESS_KEY_ID=<Access Key ID>
 AWS_ACCESS_SECRET=<Secret access key>
 AWS_REGION=eu-west-2
 AWS_BUCKET=strapi-aws-s3-images-bucket
+
+# ----------------------------EMAIL-----------------------------------
+NEWSLETTER_URL=http://newsletter:3001/api/newsletter
+NEWSLETTER_API_KEY=tu_api_key_segura
